debug checks added to makefile

--- a/code/src/makefile
+++ b/code/src/makefile
@@ -8,7 +8,15 @@
 
 COMPILER  := gfortran
 
-MODULE_FLAGS	:= -c
+MODULE_FLAGS	:= -c -fcheck=all -fbounds-check
+# activate lots of flags for debugging
+# -fcheck=all and -fbounds-check: checks for arrays and array calling
+# -Wall: warn about all, such at built-in names, wrong intent variables, etc.
+# -Wextra: even more warnings, such as unused variables
+# -Wconversion: checks for possible conversion errors
+# -pedantic: checks backwards compatibility with F95
+# -fbacktrace: produce backtrace when crashing
+MAIN_FLAGS		:= -fcheck=all -fbounds-check -Wall -Wextra -Wconversion -pedantic -fbacktrace
 MODULES			:=	mod_global_variables.f08 		\
 					mod_setup_grid.f08 				\
 					mod_setup_equilibrium.f08		\
@@ -26,7 +34,7 @@ all:	compile_modules	\
 compile_modules:
 	$(COMPILER) $(MODULE_FLAGS) $(MODULES)
 compile_main:
-	$(COMPILER) $(MODULES) $(MAIN) -o $(OUTPUT)
+	$(COMPILER) $(MAIN_FLAGS) $(MODULES) $(MAIN) -o $(OUTPUT)
 clean:
 	if [ mod_global_variables.o ]; then  \
 		rm mod_global_variables.o;		 \
