gravity module added

--- a/code/makefile
+++ b/code/makefile
@@ -20,6 +20,7 @@ OUTPUT   := program.exe
 objects  := $(addprefix $(BINDIR)/, 			  		  \
 								mod_physical_constants.o					\
 								mod_global_variables.o 						\
+								mod_gravity.o											\
 								mod_cooling_curves.o							\
 								mod_radiative_cooling.o						\
 								mod_thermal_conduction.o					\
