--- a/code/makefile
+++ b/code/makefile
@@ -32,6 +32,7 @@ objects  := $(addprefix $(BINDIR)/, 			  		  \
 								mod_equilibrium.o									\
 								mod_equilibrium_derivatives.o			\
 								mod_make_subblock.o								\
+								mod_boundary_conditions.o					\
 								mod_setup_matrix_b.o							\
 								mod_setup_matrix_a.o							\
 								mod_solvers.o											\
