--- a/code/makefile
+++ b/code/makefile
@@ -26,6 +26,7 @@ TEST_OUT := run_tests.exe
 objects  := $(addprefix $(BINDIR)/, 			  		  \
 								mod_physical_constants.o					\
 								mod_global_variables.o 						\
+								mod_input.o												\
 								mod_resistivity.o									\
 								mod_gravity.o											\
 								mod_io.o													\
