enable tests for `master` and `develop` branches

--- a/.github/workflows/continuous_integration.yml
+++ b/.github/workflows/continuous_integration.yml
@@ -3,7 +3,9 @@ name: Automatic Tests
 on:
   push:
     branches: 
+      - master
       - testing_framework
+      - develop
   pull_request:
     branches: 
       - master
