updated core tests, removed answer tests (will be done using pytest)

--- a/tests/core_tests/makefile
+++ b/tests/core_tests/makefile
@@ -1,14 +1,10 @@
 FC := gfortran
-SRCDIR := ../src
-BINDIR := ../bin
-MODDIR := ../mod
+SRCDIR := ../../src
+BINDIR := ../../bin
+MODDIR := ../../mod
 
-all:	list_builtins \
-			test_legolas
-	
-list_builtins: 
-	$(FC) -E -dM - < /dev/null > builtins.inc
-		
+all:	test_legolas_core
+
 libpFUnit.a: $(BINDIR)/*.o
 	$(AR) -r $@ $?
 
@@ -25,12 +21,11 @@ include $(LATEST_PFUNIT_DIR)/include/PFUNIT.mk
 
 FFLAGS += $(PFUNIT_EXTRA_FFLAGS)
 
-test_legolas: libpFUnit.a
+test_legolas_core: libpFUnit.a
 
-test_legolas_TESTS := core_tests.pf comparison_tests.pf
-test_legolas_OTHER_LIBRARIES := -L. -lpFUnit -lblas -llapack
-$(eval $(call make_pfunit_test,test_legolas))
-
+test_legolas_core_TESTS := core_tests.pf
+test_legolas_core_OTHER_LIBRARIES := -L. -lpFUnit -lblas -llapack
+$(eval $(call make_pfunit_test,test_legolas_core))
 
 clean:
-	$(RM) *.o *.mod *.a *.inc *.F90 test_legolas
+	$(RM) *.o *.mod *.a *.inc *.F90 test_legolas_core
