--- a/.github/workflows/legolas_core.yml
+++ b/.github/workflows/legolas_core.yml
@@ -38,8 +38,9 @@ jobs:
     - name: Build pFUnit
       if: steps.pfunit-cache.outputs.cache-hit != 'true'
       run: |
+        cd tests/core_tests
         git clone https://github.com/Goddard-Fortran-Ecosystem/pFUnit.git
-        cd tests/core_tests/pFUnit
+        cd pFUnit
         mkdir build
         cd build
         cmake .. -DSKIP_MPI=YES -DSKIP_OPENMP=YES -DSKIP_FHAMCREST=YES
