--- a/.github/workflows/pylbo_core.yml
+++ b/.github/workflows/pylbo_core.yml
@@ -22,7 +22,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install flake8 pytest numpy matplotlib f90nml tqdm psutil
-        cd post-processing
+        cd post_processing
         python setup.py develop
         
     - name: Lint with flake8
