--- a/.github/workflows/pylbo_core.yml
+++ b/.github/workflows/pylbo_core.yml
@@ -6,6 +6,10 @@ on:
   pull_request:
     branches: [master, develop]
 
+env:
+  CC: /usr/bin/gcc-9
+  FC: /usr/bin/gfortran-9
+
 jobs:
   build:
 
@@ -18,12 +22,21 @@ jobs:
       with:
         python-version: 3.8
  
-    - name: Install dependencies
+    - name: Install python dependencies
       run: |
         python -m pip install --upgrade pip
         pip install flake8 pytest numpy matplotlib f90nml tqdm psutil
         cd post_processing
         python setup.py develop
+        
+    - name: Install Legolas dependencies
+      run: |
+        sudo add-apt-repository ppa:ubuntu-toolchain-r/test
+        sudo apt update
+        sudo apt-get install gfortran-9
+        sudo apt-get install libblas-dev
+        sudo apt-get install liblapack-dev
+        gfortran-9 --version
         
     - name: Lint with flake8
       run: |
@@ -32,6 +45,10 @@ jobs:
         flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
         # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
+        
+    - name: Compile Legolas
+      run: |
+        make FC=gfortran-9
         
     - name: Test Pylbo core
       run: |
