--- a/.github/workflows/pylbo_core.yml
+++ b/.github/workflows/pylbo_core.yml
@@ -1,4 +1,4 @@
-name: Pylbo core tests
+name: pylbo-core
 
 on:
   push:
@@ -21,14 +21,14 @@ jobs:
       uses: actions/setup-python@v1
       with:
         python-version: 3.8
- 
+
     - name: Install python dependencies
       run: |
         python -m pip install --upgrade pip
         pip install flake8 pytest numpy matplotlib f90nml tqdm psutil
         cd post_processing
         python setup.py develop
-        
+
     - name: Install Legolas dependencies
       run: |
         sudo add-apt-repository ppa:ubuntu-toolchain-r/test
@@ -37,7 +37,7 @@ jobs:
         sudo apt-get install libblas-dev
         sudo apt-get install liblapack-dev
         gfortran-9 --version
-        
+
     - name: Lint with flake8
       run: |
         cd tests/pylbo_tests
@@ -45,11 +45,11 @@ jobs:
         flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
         # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
-        
+
     - name: Compile Legolas
       run: |
         make FC=gfortran-9
-        
+
     - name: Test Pylbo core
       run: |
         cd tests/pylbo_tests
