--- a/.github/workflows/regression_tests.yml
+++ b/.github/workflows/regression_tests.yml
@@ -54,3 +54,10 @@ jobs:
       run: |
         cd tests/regression_tests
         pytest
+
+    - name: Archive failed logs
+      uses: actions/upload-artifact@v1
+      if: failure()
+      with:
+        name: failed_logs
+        path: tests/regression_tests/results
