--- a/docs/.gitignore
+++ b/docs/.gitignore
@@ -7,8 +7,6 @@ content/src-docs/ford
 Gemfile
 Gemfile.lock
 content/src-docs/sphinx
-sphinx_source/_rst_files
-sphinx_source/_static
-sphinx_source/_templates
+sphinx_source/rst_files
 
 
