use autoAPI with Sphinx and this directly outputs to Jekyll's _site directory to handle underscore omission

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -27,3 +27,8 @@ plugins:
 exclude:
   - Gemfile
   - Gemfile.lock
+
+# this is needed because sphinx creates directories with _ prepended, which
+# are not copied by Jekyll.
+keep_files:
+  - content/src-docs/sphinx
