--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,4 +1,5 @@
-title: Legolas
+title: The Legolas Code
+subtitle: A novel tool for 1D MHD spectroscopy
 email: niels.claes@kuleuven.be
 description: >-
   The Legolas code
@@ -6,23 +7,20 @@ baseurl: "/the-legolas-code"
 url: "localhost:4000"
 permalink: pretty
 
-aux_links:
-  "The Legolas code on GitHub":
-    - "https://github.com/n-claes/legolas"
-aux_links_new_tab: true
-back_to_top: false
+minimal_mistakes_skin: "air"
+search: true
 
-footer_content: "Legolas is licensed under the <a href=\"https://www.gnu.org/licenses/gpl-3.0.html\">GPL-3.0 License.</a>"
-last_edit_timestamp: true
-last_edit_time_format: "%b %e %Y"
-
-color_scheme: light
+footer:
+  links:
+    - label: "The Legolas code on GitHub"
+      icon: "fab fa-fw fa-github"
+      url: https://github.com/n-claes/website_test
 
 # Build settings
-remote_theme: pmarsceill/just-the-docs
-theme: "just-the-docs"
+remote_theme: mmistakes/minimal-mistakes
 plugins:
   - jekyll-feed
+  - jekyll-include-cache
 
 exclude:
   - Gemfile
