--- a/docs/_data/navigation.yml
+++ b/docs/_data/navigation.yml
@@ -31,8 +31,12 @@ leftcontents:
         url: /content/general/own_setup/
   - title: Data-analysis with Pylbo
     children:
+      - title: "About Pylbo"
+        url: /content/pylbo/about_pylbo/
       - title: "Installing Pylbo"
         url: /content/pylbo/installing_pylbo/
+      - title: "Using Pylbo"
+        url: /content/pylbo/using_pylbo/
       - title: "Generating parfiles"
         url: /content/pylbo/generate_parfiles/
   - title: Testing
@@ -45,7 +49,9 @@ leftcontents:
         url: /content/testing/test_pylbo/
   - title: Misc
     children:
-      - title: "History"
-        url: /content/misc/history/
+      - title: "Legolas changelog"
+        url: /content/misc/legolas_changelog/
+      - title: "Pylbo changelog"
+        url: /content/misc/pylbo_changelog/
       - title: "Contributing"
         url: /content/misc/contributing/
