--- a/tests/core_tests/CMakeLists.txt
+++ b/tests/core_tests/CMakeLists.txt
@@ -39,6 +39,7 @@ set( test_sources
         mod_test_variables.pf
         mod_test_grid.pf
         mod_test_input.pf
+        mod_test_valuechecks.pf
 )
 add_pfunit_ctest (test_legolas
         TEST_SOURCES ${test_sources}
