--- a/tests/core_tests/CMakeLists.txt
+++ b/tests/core_tests/CMakeLists.txt
@@ -42,6 +42,7 @@ set( test_sources
         mod_test_valuechecks.pf
         mod_test_units.pf
         mod_test_cooling.pf
+        mod_test_resistivity.pf
 )
 add_pfunit_ctest (test_legolas
         TEST_SOURCES ${test_sources}
