--- a/tests/core_tests/CMakeLists.txt
+++ b/tests/core_tests/CMakeLists.txt
@@ -43,6 +43,7 @@ set( test_sources
         mod_test_units.pf
         mod_test_cooling.pf
         mod_test_resistivity.pf
+        mod_test_conduction.pf
 )
 add_pfunit_ctest (test_legolas
         TEST_SOURCES ${test_sources}
