added test module for boundary conditions

--- a/tests/core_tests/CMakeLists.txt
+++ b/tests/core_tests/CMakeLists.txt
@@ -44,6 +44,7 @@ set( test_sources
         mod_test_cooling.pf
         mod_test_resistivity.pf
         mod_test_conduction.pf
+        mod_test_boundaries.pf
 )
 add_pfunit_ctest (test_legolas
         TEST_SOURCES ${test_sources}
