--- a/tests/core_tests/CMakeLists.txt
+++ b/tests/core_tests/CMakeLists.txt
@@ -13,12 +13,16 @@ enable_testing()
 if (DEFINED ENV{LEGOLASDIR})
     set(BUILD $ENV{LEGOLASDIR}/build)
     set(LIB ${BUILD}/lib)
+    set(setup_tools $ENV{LEGOLASDIR}/setup_tools)
 else()
     message(FATAL_ERROR "Environment variable LEGOLASDIR is not defined!")
 endif()
 
 # place executable in top directory
 set (CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR})
+
+include(${setup_tools}/findBLAS.cmake)
+include(${setup_tools}/findLAPACK.cmake)
 
 # add default modules to library
 add_library(suite
@@ -45,11 +49,13 @@ set( test_sources
         mod_test_resistivity.pf
         mod_test_conduction.pf
         mod_test_boundaries.pf
+        mod_test_subblock.pf
+        mod_test_solvers.pf
 )
 add_pfunit_ctest (test_legolas
         TEST_SOURCES ${test_sources}
         OTHER_SOURCES mod_pfunit_exceptions.f90
-        LINK_LIBRARIES suite
+        LINK_LIBRARIES suite ${LAPACK_LIBRARIES} ${BLAS_LIBRARIES}
         EXTRA_USE mod_pfunit_exceptions
         EXTRA_INITIALIZE init_pfunit_raise
 )
