--- a/.github/workflows/pylbo_core.yml
+++ b/.github/workflows/pylbo_core.yml
@@ -26,7 +26,7 @@ jobs:
     - name: Install python dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install flake8 pytest numpy matplotlib f90nml tqdm psutil
+        pip install pytest numpy matplotlib f90nml tqdm psutil pytest-mpl pytest-timeout
         cd post_processing
         python setup.py develop
 
@@ -41,19 +41,18 @@ jobs:
         gfortran-9 --version
         cmake --version
 
-    - name: Lint with flake8
-      run: |
-        cd tests/pylbo_tests
-        # stop the build if there are Python syntax errors or undefined names
-        flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
-        # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
-        flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
-
     - name: Compile Legolas
       run: sh setup_tools/buildlegolas.sh
 
     - name: Test Pylbo core
       run: |
         cd tests/pylbo_tests
-        pytest
+        pytest --mpl --mpl-results-path=results --verbose
+
+    - name: Archive failed logs
+      uses: actions/upload-artifact@v1
+      if: failure()
+      with:
+        name: failed_logs
+        path: tests/pylbo_tests/results
 
