--- a/.github/workflows/pylbo_core.yml
+++ b/.github/workflows/pylbo_core.yml
@@ -12,9 +12,30 @@ env:
   LEGOLASDIR: /home/runner/work/legolas/legolas
 
 jobs:
-  build:
-
+  style:
     runs-on: ubuntu-latest
+
+    steps:
+      - uses: actions/checkout@v2
+      - name: Set up Python 3.8
+        uses: actions/setup-python@v1
+        with:
+          python-version: 3.8
+
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install flake8 black
+
+      - name: Run flake8
+        run: |
+          flake8 --count --exclude=__init__.py --extend-ignore=E203,W503 --max-line-length=125 --show-source --statistics post_processing/
+          flake8 --count --exclude=__init__.py --extend-ignore=E203,W503 --max-line-length=125 --show-source --statistics tests/pylbo_tests/
+          flake8 --count --exclude=__init__.py --extend-ignore=E203,W503 --max-line-length=125 --show-source --statistics tests/regression_tests/
+
+  tests:
+    runs-on: ubuntu-latest
+    needs: style
 
     steps:
     - uses: actions/checkout@v2
