--- a/.github/workflows/regression_tests.yml
+++ b/.github/workflows/regression_tests.yml
@@ -13,7 +13,6 @@ env:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
 
     steps:
@@ -26,7 +25,7 @@ jobs:
     - name: Install python dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install flake8 pytest numpy matplotlib f90nml tqdm psutil
+        pip install pytest numpy matplotlib f90nml tqdm psutil
         cd post_processing
         python setup.py develop
 
@@ -40,21 +39,13 @@ jobs:
         sudo apt-get install liblapack-dev
         gfortran-9 --version
 
-    - name: Lint with flake8
-      run: |
-        cd tests/regression_tests
-        # stop the build if there are Python syntax errors or undefined names
-        flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
-        # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
-        flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
-
     - name: Compile Legolas
       run: sh setup_tools/buildlegolas.sh
 
     - name: Run regression tests
       run: |
         cd tests/regression_tests
-        pytest
+        pytest --verbose
 
     - name: Archive failed logs
       uses: actions/upload-artifact@v1
